[gd_scene load_steps=3 format=3 uid="uid://8rpws3tl4cl5"]

[ext_resource type="Script" path="res://global/menu_screen.gd" id="1_exvxi"]

[sub_resource type="LabelSettings" id="LabelSettings_an1qq"]
font_size = 70

[node name="MenuScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_exvxi")

[node name="DeathScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.589096, 0.589096, 0.589096, 0.301961)

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -65.5
offset_right = 164.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "YOU DIED"
label_settings = SubResource("LabelSettings_an1qq")

[node name="Button" type="Button" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "TRY AGAIN"

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.589096, 0.589096, 0.589096, 0.301961)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -33.0
offset_right = 37.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PAUSED"
label_settings = SubResource("LabelSettings_an1qq")
horizontal_alignment = 1

[node name="Button" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RESTART"

[node name="Button2" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[connection signal="pressed" from="DeathScreen/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
